задание 15(исправленное, JS)

--- a/Ex15(JS).html
+++ b/Ex15(JS).html
@@ -3,10 +3,10 @@
 <title>h1</title>
 <script language="JavaScript"> 
 function colorchange() {
-document.getElementById("head").style.color = "red";
+head.style.color = "red";
 }
 function resetColor() {
-document.getElementById("head").style.color = "black";
+head.style.color = "black";
 }
 </script>
 </head>
