--- a/Ex9(JS).html
+++ b/Ex9(JS).html
@@ -1,17 +1,13 @@
 <html>
 <head>
 <title>document</title>
-<style>
-body {
-background-color: #E7E6D8;
-color: red;
-}
-</style>
 </head>
 <body>
 <script language="JavaScript" type="text/JavaScript">
 document.write("Спасибо, что пришли к нам на курсы!");
-document.write("<br><br>Дата последнего изменения: " + document.lastModified); 
+document.bgColor = "#E7E6D8";
+document.fgColor = "red";
+document.write("<br>" + document.lastModified);
 </script>
 </body>
-</html>
+</html> 
