--- a/Ex3(JS).html
+++ b/Ex3(JS).html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <script>
-let userName = prompt("Введите сюда своё имя", "Введите имя");
+var userName = prompt("Введите сюда своё имя", "Введите имя");
 document.write("Ваше имя: " + userName);
 if (confirm("Начать заново?")) {
 alert("Не надоело?");
