Разработка веб-сайта для кулинаров

--- a/recipe-торт наполеон.html
+++ b/recipe-торт наполеон.html
@@ -12,6 +12,7 @@
 <li><a href="recipes.html">Рецепты</a></li>
 <li><a href="about.html">О нас</a></li>
 <li><a href="contacts.html">Контакты</a></li>
+<li><a href="registration.html">Регистрация</a></li>
 </ul>
 </nav>
 </header>
@@ -61,7 +62,7 @@
 <div class="recipe">
 <img src="шоколадный торт.jpg" alt="Шоколадный торт">
 <h3><a href="recipe-шоколадный торт.html">Шоколадный торт</a></h3>
-<p>Очень вкусный и нежный шоколадный торт, который очень прост в приготовлении..</p>
+<p>Очень вкусный и нежный шоколадный торт, который очень прост в приготовлении.</p>
 </div>
 <div id="comments">
 <h3>Комментарии</h3>
