--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>КулинарНирвана - Главная</title>
 <link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 </head>
 <body>
 <header>
@@ -12,6 +13,7 @@
 <li><a href="recipes.html">Рецепты</a></li>
 <li><a href="about.html">О нас</a></li>
 <li><a href="contacts.html">Контакты</a></li>
+<li><a href="registration.html">Регистрация</a></li>
 </ul>
 </nav>
 </header>
