--- a/recipe-жульен.html
+++ b/recipe-жульен.html
@@ -12,6 +12,7 @@
 <li><a href="recipes.html">Рецепты</a></li>
 <li><a href="about.html">О нас</a></li>
 <li><a href="contacts.html">Контакты</a></li>
+<li><a href="registration.html">Регистрация</a></li>
 </ul>
 </nav>
 </header>
