Разработка веб-сайта для кулинаров(обновленные ссылки)

--- a/recipe-жульен.html
+++ b/recipe-жульен.html
@@ -42,6 +42,7 @@
 <li>Если ваша сковорода позволяет, украсьте жульен с курицей листиками базилика и подавайте к столу прямо в этой посуде.</li>
 <li>Или подавайте жюльен порционно на тарелке, украсив зеленью и дополнив блюдо свежими овощами. Приятного аппетита!</li>
 </ol>
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/MSA_bbL7IuU"></iframe>
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
