--- a/recipe-салат с кальмарами.html
+++ b/recipe-салат с кальмарами.html
@@ -40,7 +40,8 @@
 <li>Выкладываем все подготовленные ингредиенты в миску, добавляем соль. Заправляем майонезом и хорошо перемешиваем.</li>
 <li>Салат с кальмарами готов! Украшаем нарезанным зеленым луком и укропом. Приятного аппетита!</li>
 </ol>
-<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=160882 frameborder="0" allowfullscreen></iframe>
+<!--<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=160882 frameborder="0" allowfullscreen></iframe>-->
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/3M-_YSiKJAA"></iframe>
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
