--- a/recipe-салат со шпинатом.html
+++ b/recipe-салат со шпинатом.html
@@ -47,7 +47,8 @@
 <li>Хорошо всё перемешайте.</li>
 <li>Для подачи выложите салат горкой на порционную сервировочную тарелку, присыпьте натёртым яичным желтком и щепоткой петрушки или зелёного лука.</li>
 </ol>
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=eW7lrzD9-jc frameborder="0" allowfullscreen></iframe>
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/Uk-j-xsQ_v0"></iframe>
+<!--<iframe width="560" height="315" src="https://www.youtube.com/watch?v=eW7lrzD9-jc frameborder="0" allowfullscreen></iframe>-->
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
