--- a/recipe-солянка.html
+++ b/recipe-солянка.html
@@ -55,6 +55,7 @@
 <li>Зелень мелко нарежьте.</li>
 <li>При подаче положите в каждую тарелку по кружку лимона, посыпьте солянку рубленой зеленью и добавьте сметану. Приятного аппетита!</li>
 </ol>
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/8ohRD-Sq3h0"></iframe>
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
