--- a/recipe-торт наполеон.html
+++ b/recipe-торт наполеон.html
@@ -51,7 +51,8 @@
 <br>
 <li>Перемазываем коржи кремом, крошим обрезки и обсыпаем ими торт. Ставим торт Наполеон в холодильник на 12 часов, чтобы хорошо пропитался. Торт готов!</li>
 </ol>
-<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=145198 frameborder="0" allowfullscreen></iframe>
+<!--<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=145198 frameborder="0" allowfullscreen></iframe>-->
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/zmW1Ed7kEis"></iframe>
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
