--- a/recipe-фунчоза с курицей и овощами.html
+++ b/recipe-фунчоза с курицей и овощами.html
@@ -45,6 +45,7 @@
 <li>Затем добавить в сковороду фунчозу.</li>
 <li>Перемешать всё, добавить соль и перец, прогреть минуту. Посыпать кунжутом. Вот и всё, блюдо готово к подаче!</li>
 </ol>
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/LKGHCIoGMwY"></iframe>
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
