--- a/recipe-шоколадный торт.html
+++ b/recipe-шоколадный торт.html
@@ -81,7 +81,8 @@
 <br>
 <li>Шоколадный торт с творожно-сметанным кремом и шоколадной глазурью готов, можно подавать к столу.</li>
 </ol>
-<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=155967 frameborder="0" allowfullscreen></iframe>
+<!--<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=155967 frameborder="0" allowfullscreen></iframe>-->
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/ONXXw-b4kAM"></iframe>
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
