--- a/recipe-медовик.html
+++ b/recipe-медовик.html
@@ -84,7 +84,8 @@
 <br>
 <li>Нарезаем торт на порционные кусочки, завариваем вкусный чай и наслаждаемся самым вкусным медовиком! Приятного аппетита и удачной вам выпечки!</li>
 </ol>
-<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=144640 frameborder="0" allowfullscreen></iframe>
+<iframe width="1026" height="577" src="https://www.youtube.com/embed/SyJ3cGnI7bQ"></iframe>
+<!--<iframe width="560" height="315" src="https://www.russianfood.com/recipes/recipe.php?rid=144640 frameborder="0" allowfullscreen></iframe>-->
 <div id="similar-recipes">
 <h3>Похожие рецепты</h3>
 <div class="recipe">
